# SceCells

./: CMakeLists.txt
resources/: CellCenters10.txt  CellCenters100.txt  CellCenters1200.txt  CellCenters125.txt  CellCenters2.txt  CellCenters300.txt  CellCenters500.txt  CellCenters_count_2.txt  disc_M.cfg  profile_disc_m.cfg
src/: CMakeLists.txt
src/common/: CudaEventManager.h
src/main/: CMakeLists.txt  discMain_M.cpp
src/profiling/: AveragedBlockStrategy.cpp  CMakeLists.txt  CompositeProfiler.cpp  CompositeProfiler.h  CompoundingEventProfiler.cpp  CompoundingEventProfiler.h  CudaEventLifecycle.h  CudaEventLifecycleHandler.h  OFStreamCSV.cpp  OFStreamCSV.h  Profiler.cpp  Profiler.h  ProfilingCoordinator.cpp  ProfilingCoordinator.h  SingleEventProfiler.cpp  SingleEventProfiler.h  StrategyProfiler.cpp  StrategyProfiler.h
src/srcCPU/: CellInitHelper.cpp
src/srcGPU/: CMakeLists.txt  SceCells.cu  SceCells.h  SceNodes.cu  SceNodes.h  SimulationDomainGPU.cu  SimulationDomainGPU.h
